--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,6 @@
-<!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
-
-  {% include head.html %}
-
-  <body>
-
-    {% include header.html %}
-
-
-        {{ content }}
-
-    {% include footer.html %}
-      
-    {% include script.html %}
-
-  </body>
-
-</html>
+---
+theme :
+  name : bootstrap-3
+---
+{% include JB/setup %}
+{% include themes/bootstrap-3/default.html %}
