--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,8 +1,7 @@
 ---
+theme :
+  name : bootstrap-3
 layout: default
 ---
-<div class="container">
-
-    {{ content }}
-
-</div>
+{% include JB/setup %}
+{% include themes/bootstrap-3/page.html %}
